--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,4 +22,4 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
 telegram:
-  bot: 256228750:AAGOyJBouxji0cQE18o8ZqxAahRA2jClexs
+  bot: <%= ENV["PRACTICE_BOT_TOKEN"] %>
